--- a/kube-vip/kube-vip.yaml
+++ b/kube-vip/kube-vip.yaml
@@ -1,3 +1,32 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: kube-vip
+  namespace: kube-system
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata: { name: kube-vip }
+rules:
+  - apiGroups: [""]
+    resources: ["services","endpoints","nodes","pods","configmaps","events"]
+    verbs: ["get","list","watch","create","update","patch"]
+  - apiGroups: ["coordination.k8s.io"]
+    resources: ["leases"]
+    verbs: ["get","list","watch","create","update","patch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata: { name: kube-vip }
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: kube-vip
+subjects:
+  - kind: ServiceAccount
+    name: kube-vip
+    namespace: kube-system
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -12,26 +41,29 @@ spec:
       labels:
         app: kube-vip
     spec:
+      serviceAccountName: kube-vip
       hostNetwork: true
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
           operator: "Exists"
           effect: "NoSchedule"
-      nodeSelector:
-        node-role.kubernetes.io/control-plane: "true"
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: node-role.kubernetes.io/control-plane
+                    operator: Exists
       containers:
         - name: kube-vip
-          image: ghcr.io/kube-vip/kube-vip:v0.6.4
-          args: ["manager"]
-          env:
-            - name: vip_address
-              value: "192.168.100.100"
-            - name: vip_interface
-              value: "eth0"
-            - name: cp_enable
-              value: "true"
-            - name: lb_enable
-              value: "false"
+          image: ghcr.io/kube-vip/kube-vip:v1.0.0
+          args:
+            - manager
+            - --controlplane
+            - --address
+            - "192.168.100.100"
+            - --interface
+            - "eth0"
           securityContext:
             capabilities:
-              add: ["NET_ADMIN","SYS_TIME"]
+              add: ["NET_ADMIN","NET_RAW","SYS_TIME"]
