--- a/longhorn/longhorn-ui.yaml
+++ b/longhorn/longhorn-ui.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: longhorn-ui
   namespace: longhorn-system
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-dns
 spec:
   ingressClassName: nginx
   rules:
@@ -12,4 +14,10 @@ spec:
       - path: /
         pathType: Prefix
         backend:
-          service: { name: longhorn-frontend, port: { number: 80 } }
+          service:
+            name: longhorn-frontend
+            port:
+              number: 80
+  tls:
+  - hosts: [longhorn.cluster.rohrbom.be]
+    secretName: longhorn-tls
