--- a/longhorn/longhorn.yaml
+++ b/longhorn/longhorn.yaml
@@ -10,5 +10,5 @@ parameters:
   numberOfReplicas: "2"
   dataLocality: "best-effort"
   replicaAutoBalance: "best-effort"
-  nodeSelector: "longhorn=storage"
+  nodeSelector: "general_storage"
 volumeBindingMode: WaitForFirstConsumer
