--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ guide-secrets.md
 altlast.md
 kochen.mitschen.de/ghcr-cred.yaml
 vault.rohrbom.be/vault-secret.yaml
+mon.rohrbom.be/influxdb/influxdb-secret.yaml
