--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ altlast.md
 kochen.mitschen.de/ghcr-cred.yaml
 vault.rohrbom.be/vault-secret.yaml
 mon.rohrbom.be/influxdb/influxdb-secret.yaml
+mon.rohrbom.be/grafana/garafana-secret.yaml
