--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ kochen.mitschen.de/ghcr-cred.yaml
 vault.rohrbom.be/vault-secret.yaml
 mon.rohrbom.be/influxdb/influxdb-secret.yaml
 mon.rohrbom.be/grafana/grafana-secret.yaml
+temp.md
