--- a/ingress/values-ingress-vlan20-internal.yaml
+++ b/ingress/values-ingress-vlan20-internal.yaml
@@ -1,13 +1,39 @@
+# ingress/values-ingress-vlan20-mgmt.yaml
 controller:
+  kind: DaemonSet
+
+  tolerations:
+    - key: "node-role.kubernetes.io/control-plane"
+      operator: "Exists"
+      effect: "NoSchedule"
+    - key: "node-role.kubernetes.io/master"
+      operator: "Exists"
+      effect: "NoSchedule"
+
   ingressClassResource:
     name: nginx-internal
     controllerValue: "k8s.io/ingress-nginx-internal"
   ingressClass: nginx-internal
   ingressClassByName: true
   watchIngressWithoutClass: false
+
   service:
     type: LoadBalancer
     externalTrafficPolicy: Local
     loadBalancerIP: 192.168.20.151
     annotations:
       metallb.universe.tf/address-pool: pool-vlan20-internal
+
+  publishService:
+    enabled: true
+
+  config:
+    use-forwarded-headers: "false"
+
+  metrics:
+    enabled: true
+    service:
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "10254"
+        prometheus.io/path: "/metrics"
