--- a/longhorn/longhorn.yaml
+++ b/longhorn/longhorn.yaml
@@ -12,3 +12,27 @@ parameters:
   replicaAutoBalance: "best-effort"
   nodeSelector: "general_storage"
 volumeBindingMode: WaitForFirstConsumer
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: longhorn-ui
+  namespace: longhorn-system
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-dns
+spec:
+  ingressClassName: nginx-admin
+  rules:
+  - host: longhorn.cluster.rohrbom.be
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: longhorn-frontend
+            port:
+              number: 80
+  tls:
+  - hosts: [longhorn.cluster.rohrbom.be]
+    secretName: longhorn-tls
