--- a/mon.rohrbom.be/grafana/grafana.yaml
+++ b/mon.rohrbom.be/grafana/grafana.yaml
@@ -44,6 +44,8 @@ spec:
           - name: GF_SECURITY_ADMIN_PASSWORD
             valueFrom:
               secretKeyRef: { name: grafana-admin, key: admin-password }
+          - name: GF_METRICS_ENABLED
+            value: "true"
           volumeMounts:
             - { name: data, mountPath: /var/lib/grafana }
           readinessProbe:
@@ -66,6 +68,10 @@ kind: Service
 metadata:
   name: grafana
   namespace: ops-monitoring
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "3000"
+    prometheus.io/path: "/metrics"
 spec:
   type: ClusterIP
   selector: { app: grafana }
