--- a/mon.rohrbom.be/influxdb/influxdb.yaml
+++ b/mon.rohrbom.be/influxdb/influxdb.yaml
@@ -60,6 +60,10 @@ kind: Service
 metadata:
   name: influxdb
   namespace: ops-monitoring
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "8086"
+    prometheus.io/path: "/metrics"
 spec:
   type: ClusterIP
   selector: { app: influxdb }
