--- a/mon.rohrbom.be/influxdb/influxdb.yaml
+++ b/mon.rohrbom.be/influxdb/influxdb.yaml
@@ -23,6 +23,8 @@ metadata:
   labels: { app: influxdb }
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector: { matchLabels: { app: influxdb } }
   template:
     metadata: { labels: { app: influxdb } }
