--- a/mon.rohrbom.be/node-exporter/node-exporter.yaml
+++ b/mon.rohrbom.be/node-exporter/node-exporter.yaml
@@ -12,19 +12,25 @@ spec:
       labels: { app: node-exporter }
     spec:
       hostPID: true
+      hostNetwork: true                # <-- wichtig: an die Host-IP binden
+      dnsPolicy: ClusterFirstWithHostNet
       tolerations:
-        - operator: "Exists"
+        - operator: "Exists"           # läuft auf allen Nodes inkl. Control-Plane
       containers:
         - name: node-exporter
-          image: prom/node-exporter:latest
+          image: prom/node-exporter:v1.8.2
           imagePullPolicy: IfNotPresent
           args:
+            - --web.listen-address=:9100
             - --path.rootfs=/host/root
             - --path.procfs=/host/proc
             - --path.sysfs=/host/sys
-            - --no-collector.hwmon
+            # optional: weniger Metriken durch Mount-Point/FS-Filter
+            - --collector.filesystem.mount-points-exclude=^/(dev|proc|sys|run|var/lib/kubelet/pods|var/lib/containerd|var/lib/docker)($|/)
+            - --collector.filesystem.fs-types-exclude=^(autofs|binfmt_misc|cgroup2?|configfs|debugfs|devpts|devtmpfs|hugetlbfs|iso9660|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
           ports:
-            - { name: metrics, containerPort: 9100 }
+            - name: metrics
+              containerPort: 9100
           securityContext:
             readOnlyRootFilesystem: true
             allowPrivilegeEscalation: false
@@ -49,9 +55,6 @@ metadata:
   name: node-exporter
   namespace: ops-monitoring
   labels: { app: node-exporter }
-annotations:
-  prometheus.io/scrape: "true"
-  prometheus.io/port: "9100"
 spec:
   clusterIP: None
   selector: { app: node-exporter }
