--- a/ingress/values-ingress-vlan20-internal.yaml
+++ b/ingress/values-ingress-vlan20-internal.yaml
@@ -32,8 +32,6 @@ controller:
 
   metrics:
     enabled: true
-    service:
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "10254"
-        prometheus.io/path: "/metrics"
+
+  extraArgs:
+    metrics-per-host: "false"
