--- a/ingress/values-ingress-vlan30-public.yaml
+++ b/ingress/values-ingress-vlan30-public.yaml
@@ -32,9 +32,7 @@ controller:
 
   metrics:
     enabled: true
-    service:
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "10254"
-        prometheus.io/path: "/metrics"
+
+  extraArgs:
+    metrics-per-host: "false"
 
