--- a/kochen.mitschen.de/kochen.yaml
+++ b/kochen.mitschen.de/kochen.yaml
@@ -89,3 +89,31 @@ spec:
   tls:
     - hosts: [kochen.mitschen.de]
       secretName: kochen-tls
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: kochen-ingress-from-public
+  namespace: svc-kochen
+spec:
+  podSelector:
+    matchLabels: { app: kochen }
+  policyTypes: [Ingress]
+  ingress:
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: ingress-vlan30-public
+    ports:
+    - { protocol: TCP, port: 80 }
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: kochen-egress-deny
+  namespace: svc-kochen
+spec:
+  podSelector:
+    matchLabels: { app: kochen }
+  policyTypes: [Egress]
+  egress: []
