Linkding & Stirling PDF

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ vault.rohrbom.be/vault-secret.yaml
 mon.rohrbom.be/influxdb/influxdb-secret.yaml
 mon.rohrbom.be/grafana/grafana-secret.yaml
 temp.md
+ld.intern.rohrbom.be/linkding-secret.yaml
